@@ -157,6 +157,7 @@ Changes Since 0.3.9
     simple field lists.
   - Made cloaking of email addresses with ``--cloak-email-addresses``
     less obtrusive.
+  - Added support for class="expanded" lists.
 
 * docutils/writers/latex2e.py:
 
